--- a/index.html
+++ b/index.html
@@ -14,23 +14,30 @@
 
 <body>
 
-  Order Summary
+  <div class="container">
+    <img src="images/illustration-hero.svg" alt="hero image">
+    <div class="container-summary">
+      <div class="text">
+        <h2>Order Summary</h2>
+        <p>You can now listen to millions of songs, audiobooks, and podcasts on any
+          device anywhere you like!</p>
+      </div>
+      <div class="plan">
+        
+      </div>
+      <div class="buttons">
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Joseph Haddad</a>.
+      </div>
     </div>
+  </div>
+
+
+
+
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/joehaddad1000">Joseph Haddad</a>.
+  </div>
 </body>
 
 </html>
