--- a/index.html
+++ b/index.html
@@ -22,8 +22,19 @@
         <p>You can now listen to millions of songs, audiobooks, and podcasts on any
           device anywhere you like!</p>
       </div>
-      <div class="plan">
-        
+      <div class="plan-container">
+        <div class="music-i">
+          <img src="images/icon-music.svg" alt="Music image">
+        </div>
+        <div class="plan-txt">
+      <h4>Annual Plan</h4>
+      <h5>$59.99/year</h5>
+        </div>
+        <div class="plan-link">
+          <a href="#">
+            <h5>change</h5>
+          </a>
+        </div>
       </div>
       <div class="buttons">
 
