Fixed price color

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <section>
         <h4 class="m0">Annual Plan</h4>
-        <h5 class="m0">$59.99/year</h5>
+        <h5 id="h5-color" class="m0">$59.99/year</h5>
       </section>
       <div class="plan-link">
         <strong>
