removed h3 from the button

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       </div>
     </div>
     <button class="btn">
-      <h3 class="m0"> Proceed to Payement
-      </h3>
+      <strong> Proceed to Payement
+      </strong>
     </button>
     <h4 class="m1">Cancel Order</h4>
   </div>
