Fixed heading misuse issue

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
       <section>
         <h4 class="m0">Annual Plan</h4>
-        <h5 id="h5-color" class="m0">$59.99/year</h5>
+        <div id="price-color">
+          $59.99/year
+        </div>
       </section>
       <div class="plan-link">
         <strong>
@@ -47,7 +49,7 @@
       <strong> Proceed to Payement
       </strong>
     </button>
-    <h4 class="m1">Cancel Order</h4>
+    <a href="#" id="cancel">Cancel Order</a>
   </div>
 
 
