--- a/index.html
+++ b/index.html
@@ -14,46 +14,48 @@
 
 <body>
 
-  <div class="container">
-    <img src="images/illustration-hero.svg" alt="hero image">
-    <div class="container-summary">
-      <div class="text">
-        <h1>Order Summary</h1>
-        <p>You can now listen to millions of songs, audiobooks, and podcasts on any
-          device anywhere you like!</p>
+  <main role="main">
+    <div class="container">
+      <img src="images/illustration-hero.svg" alt="hero image">
+      <div class="container-summary">
+        <div class="text">
+          <h1>Order Summary</h1>
+          <p>You can now listen to millions of songs, audiobooks, and podcasts on any
+            device anywhere you like!</p>
+        </div>
       </div>
-    </div>
-    <div class="plan-annual">
-      <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48">
-        <g fill="none" fill-rule="evenodd">
-          <circle cx="24" cy="24" r="24" fill="#DFE6FB" />
-          <path fill="#717FA6" fill-rule="nonzero" d="M32.574 15.198a.81.81 0 00-.646-.19L20.581 16.63a.81.81 0 00-.696.803V26.934a3.232 3.232 0 00-1.632-.44A3.257 3.257 0 0015 29.747 3.257 3.257 0 0018.253 33a3.257 3.257 0 003.253-3.253v-8.37l9.726-1.39v5.327a3.232 3.232 0 00-1.631-.441 3.257 3.257 0 00-3.254 3.253 3.257 3.257 0 003.254 3.253 3.257 3.257 0 003.253-3.253V15.81a.81.81 0 00-.28-.613z" />
-        </g>
-      </svg>
+      <div class="plan-annual">
+        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48">
+          <g fill="none" fill-rule="evenodd">
+            <circle cx="24" cy="24" r="24" fill="#DFE6FB" />
+            <path fill="#717FA6" fill-rule="nonzero" d="M32.574 15.198a.81.81 0 00-.646-.19L20.581 16.63a.81.81 0 00-.696.803V26.934a3.232 3.232 0 00-1.632-.44A3.257 3.257 0 0015 29.747 3.257 3.257 0 0018.253 33a3.257 3.257 0 003.253-3.253v-8.37l9.726-1.39v5.327a3.232 3.232 0 00-1.631-.441 3.257 3.257 0 00-3.254 3.253 3.257 3.257 0 003.254 3.253 3.257 3.257 0 003.253-3.253V15.81a.81.81 0 00-.28-.613z" />
+          </g>
+        </svg>
 
-      <section>
-        <div id="Annual-color">
-          Annual Plan
+        <section>
+          <div id="Annual-color">
+            Annual Plan
+          </div>
+          <div id="price-color">
+            $59.99/year
+          </div>
+        </section>
+        <div class="plan-link">
+          <strong>
+            <a href="#">
+              Change
+            </a>
+          </strong>
         </div>
-        <div id="price-color">
-          $59.99/year
-        </div>
-      </section>
-      <div class="plan-link">
-        <strong>
-          <a href="#">
-            Change
-          </a>
+      </div>
+      <button class="btn">
+        <strong> Proceed to Payement
         </strong>
-      </div>
+      </button>
+      <a href="#" id="cancel">Cancel Order</a>
     </div>
-    <button class="btn">
-      <strong> Proceed to Payement
-      </strong>
-    </button>
-    <a href="#" id="cancel">Cancel Order</a>
-  </div>
 
+  </main>
 
 
 
