added footer landmark

--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
   </main>
 
 
+  <footer role="contentinfo">
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/joehaddad1000">Joseph Haddad</a>.
+    </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/joehaddad1000">Joseph Haddad</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
