--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <section>
           <div id="Annual-color">
-            Annual Plan
+            <strong>Annual Plan</strong>
           </div>
           <div id="price-color">
             $59.99/year
