fixed the Annual Plan section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <main role="main">
+  <main>
     <div class="container">
       <img src="images/illustration-hero.svg" alt="hero image">
       <div class="container-summary">
@@ -33,12 +33,9 @@
         </svg>
 
         <section>
-          <div id="Annual-color">
-            <strong>Annual Plan</strong>
-          </div>
-          <div id="price-color">
-            $59.99/year
-          </div>
+          <h2>Annual Plan</h2>
+          <p> $59.99/year
+          </p>
         </section>
         <div class="plan-link">
           <strong>
