removed the role in footer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </main>
 
 
-  <footer role="contentinfo">
+  <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://github.com/joehaddad1000">Joseph Haddad</a>.
